--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"mysql2": "^3.11.4",
+		"svelte-hero-icons": "^5.2.0",
+		"svelte-icons-pack": "^3.1.3"
 	}
 }
