--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"mysql2": "^3.11.4",
 		"svelte-hero-icons": "^5.2.0",
 		"svelte-icons": "^2.1.0",
-		"svelte-icons-pack": "^3.1.3"
+		"svelte-icons-pack": "^3.1.3",
+		"svelte-particles": "^2.12.0",
+		"tsparticles": "^3.5.0"
 	}
 }
