--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"embla-carousel-autoplay": "^8.3.1",
 		"mysql2": "^3.11.4",
+		"svelte-carousel": "^1.0.25",
 		"svelte-hero-icons": "^5.2.0",
 		"svelte-icons": "^2.1.0",
 		"svelte-icons-pack": "^3.1.3",
