--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"dayjs": "^1.11.13",
 		"embla-carousel-autoplay": "^8.3.1",
 		"mysql2": "^3.11.4",
 		"svelte-carousel": "^1.0.25",
