--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@sveltejs/kit": "^2.8.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/jwt-decode": "^3.1.0",
+		"@types/node": "^22.9.1",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.0.0-next.39",
 		"clsx": "^2.1.1",
@@ -40,6 +42,8 @@
 	"dependencies": {
 		"dayjs": "^1.11.13",
 		"embla-carousel-autoplay": "^8.3.1",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^3.1.2",
 		"mysql2": "^3.11.4",
 		"svelte-carousel": "^1.0.25",
 		"svelte-hero-icons": "^5.2.0",
