--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"crypto": "^1.0.1",
 		"dayjs": "^1.11.13",
 		"embla-carousel-autoplay": "^8.3.1",
 		"jsonwebtoken": "^9.0.2",
