--- a/package.json
+++ b/package.json
@@ -40,17 +40,21 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"axios": "^1.7.7",
 		"crypto": "^1.0.1",
 		"dayjs": "^1.11.13",
+		"dotenv": "^16.4.5",
 		"embla-carousel-autoplay": "^8.3.1",
 		"jsonwebtoken": "^9.0.2",
 		"jwt-decode": "^3.1.2",
 		"mysql2": "^3.11.4",
+		"nodemailer": "^6.9.16",
 		"svelte-carousel": "^1.0.25",
 		"svelte-hero-icons": "^5.2.0",
 		"svelte-icons": "^2.1.0",
 		"svelte-icons-pack": "^3.1.3",
 		"svelte-particles": "^2.12.0",
-		"tsparticles": "^3.5.0"
+		"tsparticles": "^3.5.0",
+		"twilio": "^5.3.6"
 	}
 }
