--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.7",
+		"chart.js": "^4.4.6",
 		"crypto": "^1.0.1",
 		"dayjs": "^1.11.13",
 		"dotenv": "^16.4.5",
